added use state to user login on the navigation bar

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URL = 'mongodb+srv://eventsbag_user:asdfay123@cluster0.cyg5b.mongodb.net
 CLOUDINARY_NAME = 'diy8f2ua7'
 CLOUDINARY_API_KEY = '374241843493557'
 CLOUDINARY_SECRET_KEY = '4YjDR8Szdce8A1hIk3P9jGJyLos'
+ADMIN_EMAIL = 'admin@eventsbag.com'
+ADMIN_PASSWORD = 'qwerty@123'
+JWT_SECRET = 'corehub'
